--- a/demo/style.css
+++ b/demo/style.css
@@ -21,6 +21,33 @@ pre code {
     border-radius: 5px;
 }
 
+h1 {
+  font-size: clamp(2rem, 4vw, 3rem);
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin: 2rem 0;
+  position: relative;
+}
+
+h2::before {
+  content: ">";
+  color: #8be9fd;
+  margin-right: 0.4rem;
+}
+
+hr {
+  width: 100%;
+  height: 5px;
+  margin: 1rem 0;
+  background: #44475a;
+  border: hidden;
+  border-radius: 5px;
+}
+
 .card {
 	background-color: #44475a;
 	padding: 1rem;
@@ -35,9 +62,6 @@ pre code {
     text-align: center;
 }
 
-.card img, .card video {
-
-}
 
 .wall {
     column-width: 400px;
@@ -71,6 +95,33 @@ pre code {
 
 #microframe .card {
     width: 400px;
+}
+
+.elem-shrink,
+.elem-stable,
+.elem-grow {
+    background-color: #44475a;
+    width: 200px;
+    height: 200px;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center; 
+    text-wrap: wrap;
+    text-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 5px;
+}
+
+#microframe .elem-stable{
+    width: 200px;
+    height: 200px;
+}
+
+#microframe .elem-grow{
+    width: 100%;
+    height: 100%;
 }
 
 .anim-demo {
